Fixed #18789 - Fixed some text wrap issues with methods in the docs.
Thanks neixetis@ for the report.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -400,6 +400,9 @@ a.rss:hover, a.rss:link, a.rss:visited {
 .literal {
     white-space:nowrap;
 }
+dt > tt.literal {
+    white-space: normal;
+}
 .literal, .literal-block {
     color:#234f32;
 }
